增加星际译王真人发声软件包

--- a/changelog/changelog.txt
+++ b/changelog/changelog.txt
@@ -1,4 +1,48 @@
 
+===== Debian-cn 2019.10.24 ===
+
+《Debian-cn 中文套件新增软件通知 -- 星际译王真人发生声音包 stardict-otdrealpeopletts》
+
+星际译王是一款不错的跨平台词典软件。 
+
+星际译王真人发生声音包 stardict-otdrealpeopletts 提供约 16000 个英文单词、短语发音的声音文件。能够在查询英文的同时，自动朗读该单词发音。
+
+相对原始压缩包文件的改进点如下：
+
+1.在 deb 包安装脚本里面自动进行声音文件的格式转换
+2.格式转换脚本，修复不支持文件名带单引号的 bug
+
+== 请使用下面的一键安装脚本命令直接安装：
+此安装包安装完成后，在 /usr/share 目录下，约占用 3.1G 磁盘空间，请在安装前留意磁盘空间是否足够。
+
+在终端命令行，用 root 依次执行如下命令即可：
+
+1.下载一键安装脚本
+
+wget http://118.24.9.73/debian/download/install-stardict-otdrealpeopletts.sh
+
+2.执行安装
+
+. ./install-stardict-otdrealpeopletts.sh
+
+注：前面是英文的 点 空格 点，表示在当前路径执行该脚本。
+
+该软件包安装过程因需要对约 16000 个声音文件进行音频格式转码，耗时相对较长，请耐心等待。
+
+== 欢迎大家使用 Debian-cn 中文套件。
+
+项目网址：
+
+https://gitee.com/atzlinux/debian-cn/tree/apt-install/
+
+本项目软件包更新日志：
+
+http://118.24.9.73/debian/download/changelog.txt
+
+#### 免责声明
+本项目基于开源软件和各个厂家的商业软件集成，对使用此项目的造成任何问题和损失，本人和本项目以及参与该项目的任何人，均不承担任何赔偿责任。
+本项目基于 Debian ，但不属于 Debian 官方。本项目的任何问题，均与 Debian 官方项目无关。
+--------------------------------------------------------------------------------
 ===== Debian-cn 2019.10.21 ===
 
 《Debian-cn 中文套件软件更新通知 -- QQ》
